Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23040

QNetworkAccessManager crash when downloading file

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.0.0
    • 5.0.0
    • Network
    • None
    • 44bd7c66e20c9fcd4b914d8ac87d5e7989aae11e

    Description

      Trying to download a large file using QNetworkAccessManager fails to allocate the downloadBuffer and the application crash at

      QHttpThreadDelegate::headerChangedSlot

      Use the attached example application to reproduce.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            xcm Martin Petersson (Inactive)
            xcm Martin Petersson (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes