QNetworkAccessManager: check the buffer size before allocate

The downloadBuffer size should not be larger then the
downloadBufferMaximumSize. I also added a try catch for the allocation
incase we are low on memory, so that we don't crash.

Task-number: QTBUG-23040
Change-Id: Ib9820bc19fc5db994ede20f123f8c167a8d43ff7
Reviewed-by: Peter Hartmann <peter.hartmann@nokia.com>

cregit: 44bd7c66e20c9fcd4b914d8ac87d5e7989aae11e https://github.com/qt/qtbase/commit/44bd7c66e20c9fcd4b914d8ac87d5e7989aae11e